--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <script src="./js/task-2.js"></script>
 
     <script src="./js/task-3.js"></script>
+
+    <script src="./js/task-4.js"></script>
   </body>
 </html>
